--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,92 +1,86 @@
 version: '3.8'
-
 services:
-  traefik:
-    image: traefik:v2.10
-    command:
-      - "--api.insecure=true"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
-    ports:
-      - "80:80"
-      - "8080:8080"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    networks:
-      - hotel-net
-    deploy:
-      placement:
-        constraints: [node.role == manager]
-
-  db:
-    image: postgres:18
-    deploy:
-      replicas: 1
-      placement:
-        constraints: [node.role == manager]
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 10
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
-      start_period: 20s
-    environment:
-      POSTGRES_DB: hotel_prestige
-      POSTGRES_PASSWORD: password
-      POSTGRES_USER: postgres
-    volumes:
-      - postgres_data:/var/lib/postgresql
-      - ./backend/migrations:/migrations
-    networks:
-      - hotel-net
-
-  backend:
-    image: hotel-backend:latest
-    deploy:
-      replicas: 3
-      restart_policy:
-        condition: on-failure
-        delay: 15s
-        max_attempts: 10
-    depends_on:
-      - db
-    environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_USER: postgres
-      DB_PASSWORD: password
-      DB_NAME: hotel_prestige
-      SERVER_PORT: 8080
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.backend.rule=PathPrefix(`/api`)"
-      - "traefik.http.routers.backend.entrypoints=web"
-      - "traefik.http.services.backend.loadbalancer.server.port=8080"
-      - "traefik.docker.network=hotel-net"
-    networks:
-      - hotel-net
-
-  frontend:
-    image: hotel-frontend:latest
-    deploy:
-      replicas: 2
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.frontend.rule=PathPrefix(`/`)"
-      - "traefik.http.routers.frontend.entrypoints=web"
-      - "traefik.http.routers.frontend.priority=1"
-      - "traefik.docker.network=hotel-net"
-    networks:
-      - hotel-net
-
+  traefik:
+    image: traefik:v2.10
+    command:
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+    ports:
+      - "80:80"
+      - "8080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - hotel-net
+    deploy:
+      placement:
+        constraints: [node.role == manager]
+  db:
+    image: postgres:18
+    deploy:
+      replicas: 1
+      placement:
+        constraints: [node.role == manager]
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 10
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 20s
+    environment:
+      POSTGRES_DB: hotel_prestige
+      POSTGRES_PASSWORD: password
+      POSTGRES_USER: postgres
+    volumes:
+      - postgres_data:/var/lib/postgresql
+      - ./backend/migrations:/migrations
+    networks:
+      - hotel-net
+  backend:
+    image: mkhodzhaev/hotel-backend:latest
+    deploy:
+      replicas: 3
+      restart_policy:
+        condition: on-failure
+        delay: 15s
+        max_attempts: 10
+    depends_on:
+      - db
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: password
+      DB_NAME: hotel_prestige
+      SERVER_PORT: 8080
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.backend.rule=PathPrefix(/api)"
+      - "traefik.http.routers.backend.entrypoints=web"
+      - "traefik.http.services.backend.loadbalancer.server.port=8080"
+      - "traefik.docker.network=hotel-net"
+    networks:
+      - hotel-net
+  frontend:
+    image: mkhodzhaev/hotel-frontend:latest
+    deploy:
+      replicas: 2
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend.rule=PathPrefix(/)"
+      - "traefik.http.routers.frontend.entrypoints=web"
+      - "traefik.http.routers.frontend.priority=1"
+      - "traefik.docker.network=hotel-net"
+    networks:
+      - hotel-net
 volumes:
-  postgres_data:
-
+  postgres_data:
 networks:
-  hotel-net:
-    external: true
+  hotel-net:
+    external: true
